# insight-capsule

./: .example.env  .gitignore  BASE_HARDENING_SUMMARY.md  DISTRIBUTION.md  InsightCapsule.spec  README.md  RELEASE_NOTES.md  ROADMAP.md  build.sh  cli.py  main.py  pyproject.toml  record_and_run.py  requirements.in  requirements.txt  tray_app.py
agents/: clarifier.py  clarifier_agent.py  drafter.py  searcher.py  synthesizer.py
config/: settings.py
core/: audio.py  exceptions.py  generation.py  local_generation.py  logger.py  storage.py  transcription.py  tts.py  vectorstore.py
pipeline/: orchestrator.py
tests/: test_core_functionality.py  test_tts.py  test_tts_minimal.py
utils/: gpt_interface.py  helpers.py  startup.py  whisper_wrapper.py
